--- a/ProyectoIntro/static/css/prueba_tabla.css
+++ b/ProyectoIntro/static/css/prueba_tabla.css
@@ -1,4 +1,4 @@
-#myInput {
+#filtro{
   background-image: url('/css/searchicon.png'); /* Add a search icon to input */
   background-position: 10px 12px; /* Position the search icon */
   background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -6,5 +6,6 @@
   font-size: 16px; /* Increase font-size */
   padding: 12px 20px 12px 40px; /* Add some padding */
   border: 1px solid #ddd; /* Add a grey border */
+  margin-top: 6px;
   margin-bottom: 12px; /* Add some space below the input */
 }
